# RustyBox

./: Cargo.toml  README.md  deny.toml
.github/workflows/: build-test.yml  lint.yml  release.yaml  release.yml  sast.yml  security-audit.yml
src/: cli.rs  main.rs
src/static_analysis/: binary_parsing.rs  callgraph.rs  decompilation.rs  disassembly.rs  metadata.rs  mod.rs  signature.rs
src/utils/: logging.rs
