[package]
name = "rustybox"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Aswinr24/RustyBox"

[dependencies]
ascii_tree = "0.1.1"
clap = "4.5.37"
colored = "3.0.0"
goblin = "0.9.3"
log = "0.4.27"
logging = "0.1.0"
r2pipe = "0.7.0"
serde_json = "1.0.140"
simplelog = "0.12.2"
termcolor = "1.4.1"
dot-parser = "0.5.1"
petgraph = "0.6.4"
ratatui = "0.29.0"
crossterm = "0.29.0"
